--- a/app/src/main/res/layout/fragment_search2.xml
+++ b/app/src/main/res/layout/fragment_search2.xml
@@ -11,6 +11,7 @@
     </data>
 
     <androidx.core.widget.NestedScrollView
+            android:background="@android:color/holo_purple"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
