--- a/components/src/main/res/layout/fragment_base_state.xml
+++ b/components/src/main/res/layout/fragment_base_state.xml
@@ -1,29 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
     <LinearLayout android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:background="@android:color/holo_blue_light"
                   android:orientation="vertical">
 
-        <!--<fragment-->
-                <!--android:id="@+id/stateFragment"-->
-                <!--android:layout_marginTop="20dp"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="match_parent"-->
-                <!--android:name="androidx.navigation.fragment.NavHostFragment"-->
-                <!--app:defaultNavHost="true"-->
-                <!--app:navGraph="@navigation/nav_state"-->
-        <!--/>-->
 
         <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
 
 
         <Button android:layout_width="100dp" android:layout_height="40dp" android:id="@+id/clear_button" android:text="CLEAR"/>
         <Button android:layout_width="100dp" android:layout_height="40dp" android:id="@+id/fetch_button" android:text="FETCH"/>
+        <TextView android:layout_width="wrap_content" android:layout_height="40dp"  android:text="STATE FRAGMENT"/>
 
         </LinearLayout>
-
 
         <FrameLayout
                 android:layout_marginTop="20dp"
@@ -31,7 +22,6 @@
                 android:id="@+id/success_container"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@android:color/holo_purple"
         />
 
     </LinearLayout>
