--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,21 +1,35 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="BaseAppTheme" parent="Theme.MaterialComponents.Light.DarkActionBar">
+    <style name="BaseAppTheme" parent="ComponentsBase.Theme">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorPrimaryVariant">@color/colorPrimary</item>
+        <item name="colorSecondaryVariant">@color/colorAccent</item>
+        <item name="errorViewStyle">@style/AppTheme.errorViewStyle</item>
+        <item name="loaderViewStyle">@style/AppTheme.loaderViewStyle</item>
+        <item name="android:textColorSecondary">@color/colorWhite</item>
     </style>
-
+0
     <style name="AppTheme" parent="BaseAppTheme"/>
 
-    <style name="AppTheme.NoActionBar">
-        <item name="windowActionBar">false</item>
-        <item name="windowNoTitle">true</item>
-    </style>
+    <!--<style name="AppTheme.NoActionBar">-->
+        <!--<item name="windowActionBar">false</item>-->
+        <!--<item name="windowNoTitle">true</item>-->
+    <!--</style>-->
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.MaterialComponents.Dark.ActionBar"/>
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.MaterialComponents.Light"/>
+
+    <style name="AppTheme.errorViewStyle" parent="ComponentsBase.ErrorView">
+        <item name="networkErrorDrawable">@raw/network_error</item>
+    </style>
+
+    <style name="AppTheme.loaderViewStyle" parent="ComponentsBase.LoaderView">
+        <item name="genericLoader">@raw/loader</item>
+    </style>
+
 </resources>
